# pymock

./: Dockerfile  README.md  environment.yml  parameters.txt  requirements.txt  run.py  setup.cfg  setup.py  tox.ini
examples/case_1/: README.md  ex1_frompy.py  example_1.py  parameters.txt
examples/case_1/expected/: pymock_2011-01-01_2011-01-02.csv
examples/case_1/input/: iside
examples/case_2/: README.md  ex2_frompy.py  ex2_fromsh.sh
examples/case_3/: README.md  ex3_frompy.py
input/: args.txt  catalog.csv
mockup/: model.py
pymock/: libs.py  main.py  model.py
source/: run.py
tests/: test_functions.py  test_reader.py  test_writer.py
tests/artifacts/: parameters_test.txt
