[metadata]
name = pymock
description = Mock-up model for the Italy Experiment
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = LICENSE
version = 0.1.0
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
url = https://git.gfz-potsdam.de/csep/it_experiment/models/pymock

[options]
packages =
    pymock
install_requires =
    numpy==1.21.5
    matplotlib==3.4.3
python_requires = >=3.7
zip_safe = no

[options.extras_require]
dev =
    numpy==1.21.5
    matplotlib==3.4.3
    pytest==7.1.3
    sphinx
    sphinx-gallery
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    pymock = pymock.main:run

[flake8]
max-line-length = 79